--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donwload Latest App Version</title>
+    <title>Download Latest App Version</title>
 </head>
 <body>
 <script>
@@ -12,12 +12,8 @@
         const link = document.createElement('a');
         link.href = 'ajial.apk';
         link.download = 'ajial.apk';
-
-        // إضافة الرابط إلى الصفحة ونشره تلقائيًا
         document.body.appendChild(link);
         link.click();
-
-        // إزالة الرابط بمجرد الانتهاء من التحميل
         document.body.removeChild(link);
     };
 </script>
