--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script>
     window.onload = function () {
         const link = document.createElement('a');
-        link.href = 'https://github.com/M3MD69/Ajial-Website/blob/403984e4f8776bbb31707db086240d45c84d3b6e/ajial.apk';
+        link.href = 'ajial.apk';
         link.download = 'ajial.apk';
         document.body.appendChild(link);
         link.click();
