--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download Latest App Version</title>
+    <link rel="icon" href="logo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <script defer src="app.js"></script>
+    <title>Ajial | Download Latest Version</title>
 </head>
 <body>
 <button id="downloadLatestVersionBtn">Download Latest Version</button>
