--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>Ajial | Download Latest Version</title>
 </head>
 <body>
+<img src="logo.png" width="400" height="400">
 <button id="downloadLatestVersionBtn">Download Latest Version</button>
+<p><b>Latest Version<br/><span id="latestVersion"></span>1.1</b></p>
 </body>
 </html>
