--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <body>
 <img src="logo.png" width="400" height="400">
 <button id="downloadLatestVersionBtn">Download Latest Version</button>
-<p><b>Latest Version<br/><span id="latestVersion"></span>1.1</b></p>
+<p><b>Latest Version<br/>1.1</b></p>
 </body>
 </html>
